# seat_controller

./: CMakeLists.txt  README.md  activate_env.sh  sdkconfig
main/: CMakeLists.txt  main.c
main/app/: CMakeLists.txt
main/app/inc/: position_app.h  regulation_app.h
main/app/src/: position_app.c  regulation_app.c
main/drivers/: CMakeLists.txt
main/drivers/inc/: acc_driver.h
main/drivers/src/: acc_driver.c
main/inc/: freertos_includes.h
tools/linux/cmake/3.25.0/doc/cmake/html/: genindex.html  index.html  search.html  searchindex.js
tools/linux/cmake/3.25.0/doc/cmake/html/_static/: documentation_options.js
tools/linux/cmake/3.25.0/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  block.html  break.html  build_command.html  build_name.html  cmake_host_system_information.html  cmake_language.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_path.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_test.html  ctest_update.html  ctest_upload.html  define_property.html  else.html  (+87 more)
tools/linux/cmake/3.25.0/doc/cmake/html/cpack_gen/: archive.html  bundle.html  cygwin.html  deb.html  dmg.html  external.html  freebsd.html  ifw.html  nsis.html  nuget.html  packagemaker.html  productbuild.html  rpm.html  wix.html
tools/linux/cmake/3.25.0/doc/cmake/html/envvar/: ADSP_ROOT.html  ASM_DIALECT.html  ASM_DIALECTFLAGS.html  CC.html  CCMAKE_COLORS.html  CFLAGS.html  CMAKE_BUILD_TYPE.html  (+49 more)
tools/linux/cmake/3.25.0/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
tools/linux/cmake/3.25.0/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
(+1736 files in other folders)
