idf_component_register( SRCS            "main.c" 
                                        "app/src/position_app.c"
                                        "../fwk/utils/src/os_utils.c"
                                        "../fwk/drivers/src/buttons_driver.c"
                                        "../fwk/drivers/src/leds_driver.c"
                                        "../fwk/drivers/src/accelerometer_driver.c"
                                        "../fwk/drivers/src/brushed_motor_driver.c"
                                        "../fwk/hil/src/lis2dw12_hil.c"
                                        "../fwk/hil/src/hbridge_dir_hil.c"
                                        "../fwk/apis/src/mcpwm_api.c"
                        INCLUDE_DIRS    "inc"
                                        "app/inc"
                                        "../fwk/utils/inc"
                                        "../fwk/drivers/inc"
                                        "../fwk/apis/inc"
                                        "../fwk/hil/inc")